--- a/Cafe-Menu/templates/frontend/css/styles.css
+++ b/Cafe-Menu/templates/frontend/css/styles.css
@@ -8,6 +8,15 @@ h1, h2 {
 
 h1 {
     font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+img {
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -25px;
 }
 
 h2 {
@@ -66,4 +75,24 @@ hr {
 
 footer {
     font-size: 14px;
+}
+
+.address {
+    margin-bottom: 5px;
+  }
+
+a {
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: brown;
+}
+
+a:active {
+    color: brown;
 }
