--- a/Set of Colored Markers/static/css/color_styles.css
+++ b/Set of Colored Markers/static/css/color_styles.css
@@ -76,3 +76,7 @@ h2 {
 .twelve {
     background-color: rgb(0, 0, 0);
 }
+
+.thirteen {
+    background: linear-gradient(90deg, rgb(255, 0, 0), rgb(0, 255, 0));
+}
