--- a/Set of Colored Markers/templates/index.html
+++ b/Set of Colored Markers/templates/index.html
@@ -28,12 +28,27 @@
     <div class="marker nine"></div>
     <div class="marker ten"></div>
     <div class="marker eleven"></div>
+    <h2>Color Gradients</h2>
     <div class="marker twelve"></div>
-    <div class="marker thirteen">
-      <img src="https://unsplash.com/photos/tuxedo-cat-in-brown-cardboard-box-BsXeYX3efOI" alt="a cat image">
-    </div>
+    <div class="marker thirteen"></div>
     <div class="marker fourteen"></div>
-    <div class="marker fifteen"></div>    
+    <div class="marker fifteen"></div>
+    <div class="marker sixteen"></div>
+    <div class="marker seventeen"></div>
+    <div class="marker eighteen"></div>    
+    <div class="marker red">
+      <div class="sleeve"></div>
+      <div class="cap"></div>
+    </div>    
+    <div class="marker green">
+      <div class="sleeve"></div>
+      <div class="cap"></div>
+    </div>    
+    <div class="marker blue">
+      <div class="sleeve"></div>
+      <div class="cap"></div>
+    </div>    
+
   </div>
 </body>
 </html>
