Update in Registration Form

--- a/Registration-Form/templates/index.html
+++ b/Registration-Form/templates/index.html
@@ -21,7 +21,30 @@
         <label for="personal-account"><input id="personal-account" type="radio" name="account-type" checked> Personal</label>
         <label for="business-account"><input id="business-account" type="radio" name="account-type"> Business </label>
     </fieldset>
-    <fieldset></fieldset>
+    <fieldset>
+        <label for="">
+            <input type="file">
+            Upload a profile picture: 
+        </label>
+        <label for="">
+            Input your age (years): 
+            <input type="number" name="" id="" min="13" max="120">
+        </label>
+        <label for="">
+            How did you hear about us?
+            <select name="" id="">
+                <option value="">(select one)</option>
+                <option value="1">freeCodeCamp News</option>
+                <option value="2">freeCodeCamp YouTube Channel</option>
+                <option value="3">freeCodeCamp Forum</option>
+                <option value="4">Other</option>  
+            </select>
+        </label>
+        <label for="">
+            Provide a bio:
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </label>
+    </fieldset>
     <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required />
         I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
         </label>
