--- a/Registration-Form/templates/index.html
+++ b/Registration-Form/templates/index.html
@@ -11,28 +11,28 @@
     <p>Please fill out this form with the required information</p>
     <form method="post" action="https://register-demo.freecodecamp.org" ></form>
     <fieldset>
-        <label for="first-name">Enter Your First Name: <input id="first-name" type="text" required/></label>
-        <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required/></label>
-        <label for="email">Enter Your Email: <input id="email" type="email" required/></label>
-        <label for="new-password">Create a New Password: <input id="new-password" type="password" required pattern="[a-z0-5]{8,}"/></label>  <!-- minlength="8" for setting mininum length to the password -->
+        <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required/></label>
+        <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required/></label>
+        <label for="email">Enter Your Email: <input id="email" type="email" name="email" required/></label>
+        <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" required pattern="[a-z0-5]{8,}"/></label>  <!-- minlength="8" for setting mininum length to the password -->
     </fieldset>
-    <fieldset >
+    <fieldset class="inline">
         <legend>Account type (required)</legend>
-        <label for="personal-account"><input id="personal-account" type="radio" name="account-type" checked> Personal</label>
-        <label for="business-account"><input id="business-account" type="radio" name="account-type"> Business </label>
+        <label for="personal-account"><input class="inline" id="personal-account" type="radio" name="account-type" checked> Personal</label>
+        <label for="business-account"><input class="inline" id="business-account" type="radio" name="account-type"> Business </label>
     </fieldset>
     <fieldset>
-        <label for="">
-            <input type="file">
+        <label for="profile-picture">
+            <input type="file" id="profile-picture" name="profile-picture">
             Upload a profile picture: 
         </label>
-        <label for="">
+        <label for="age">
             Input your age (years): 
-            <input type="number" name="" id="" min="13" max="120">
+            <input type="number" name="number" id="age" min="13" max="120">
         </label>
-        <label for="">
+        <label for="referrer">
             How did you hear about us?
-            <select name="" id="">
+            <select name="referrer" id="referrer">
                 <option value="">(select one)</option>
                 <option value="1">freeCodeCamp News</option>
                 <option value="2">freeCodeCamp YouTube Channel</option>
@@ -40,12 +40,12 @@
                 <option value="4">Other</option>  
             </select>
         </label>
-        <label for="">
+        <label for="bio">
             Provide a bio:
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <textarea name="bio" id="bio" cols="30" rows="3" placeholder="I like coding on the beach..."></textarea>
         </label>
     </fieldset>
-    <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required />
+    <label for="terms-and-conditions"><input class="inline" id="terms-and-conditions" name="terms" type="checkbox" required />
         I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
         </label>
     <input type="submit" value="Submit">
