Respective images upload

--- a/Set-of-Colored-Markers/templates/index.html
+++ b/Set-of-Colored-Markers/templates/index.html
@@ -33,7 +33,7 @@
     <div class="marker thirteen"></div>
     <div class="marker fourteen"></div>
     <div class="marker fifteen"></div>
-    <div class="marker sixteen"></div>
+    <div class="marker sixteen_"></div>
     <div class="marker seventeen"></div>
     <div class="marker eighteen"></div>    
     <div class="marker red">
