--- a/Nutrition-Label/static/css/styles.css
+++ b/Nutrition-Label/static/css/styles.css
@@ -17,7 +17,7 @@ body {
     padding: 0 7px;
 }
 
-h1 {
+header h1 {
     text-align: center;
     margin: -4px 0;
     letter-spacing: 15px;
@@ -36,4 +36,55 @@ p {
 
 .bold {
     font-weight: 800;
+}
+
+.large {
+    height: 10px;
+}
+
+.large, .medium {
+    background-color: black;
+    border: 0;
+}
+
+.small-text {
+    font-size: 0.95rem;
+}
+
+.medium {
+    height: 5px;
+}
+
+.calories-info h2 {
+    margin: 0;
+}
+
+.calories-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.left-container p {
+    margin: -5px -2px;
+    font-size: 2em;
+    font-weight: 700;
+}
+
+.calories-info span {
+    font-size: 2.4em;
+    font-weight: 700;
+    margin: -7px -2px
+}
+
+.right {
+    justify-content: flex-end;
+}
+
+.indent {
+    margin-left: 1em;
+}
+
+.daily-value p:not(.no-divider) {
+    border-bottom: 1px solid #888989;
 }
