--- a/Quiz-Webpage/templates/index.html
+++ b/Quiz-Webpage/templates/index.html
@@ -43,11 +43,45 @@
         <h2 id="html-questions">HTML</h2>
         <div class="question-block">
             <p>1</p>
-            <fieldset class="question"></fieldset>
+            <fieldset class="question" name="question">
+              <legend>
+                The legend element represents a caption for the content of its
+                parent fieldset element
+              </legend>
+              <ul>
+                <li>
+                  <label for="">
+                    <input type="radio" id="q1-a1">
+                  </label>
+                </li>
+                <li>
+                  <label for="">
+                    <input type="radio" id="q1-a2">
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
         </div>
         <div class="question-block">
             <p>2</p>
-            <fieldset class="question"></fieldset>
+            <fieldset class="question" name="question">
+              <legend>
+                A label element nesting an input element is required to have a
+                for attribute with the same value as the input's id
+              </legend>
+              <ul>
+                <li>
+                  <label for="">
+                    <input type="radio" id="q2-a1">
+                  </label>
+                </li>
+                <li>
+                  <label for="">
+                    <input type="radio" id="q2-a2">
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
         </div>
       </section>
 
