--- a/Quiz-Webpage/templates/index.html
+++ b/Quiz-Webpage/templates/index.html
@@ -50,13 +50,15 @@
               </legend>
               <ul>
                 <li>
-                  <label for="">
-                    <input type="radio" id="q1-a1">
+                  <label for="q1-a1">
+                    <input type="radio" id="q1-a1" value="true">
+                    True
                   </label>
                 </li>
                 <li>
-                  <label for="">
-                    <input type="radio" id="q1-a2">
+                  <label for="q1-a2">
+                    <input type="radio" id="q1-a2" value="false">
+                    False
                   </label>
                 </li>
               </ul>
@@ -71,13 +73,15 @@
               </legend>
               <ul>
                 <li>
-                  <label for="">
-                    <input type="radio" id="q2-a1">
+                  <label for="q2-a1">
+                    <input type="radio" id="q2-a1" value="true">
+                    True
                   </label>
                 </li>
                 <li>
-                  <label for="">
-                    <input type="radio" id="q2-a2">
+                  <label for="q2-a2">
+                    <input type="radio" id="q2-a2" value="false">
+                    False
                   </label>
                 </li>
               </ul>
