--- a/Quiz-Webpage/templates/index.html
+++ b/Quiz-Webpage/templates/index.html
@@ -51,13 +51,13 @@
               <ul>
                 <li>
                   <label for="q1-a1">
-                    <input type="radio" id="q1-a1" value="true">
+                    <input type="radio" id="q1-a1" name="q1" value="true">
                     True
                   </label>
                 </li>
                 <li>
                   <label for="q1-a2">
-                    <input type="radio" id="q1-a2" value="false">
+                    <input type="radio" id="q1-a2" name="q1" value="false">
                     False
                   </label>
                 </li>
@@ -74,13 +74,13 @@
               <ul>
                 <li>
                   <label for="q2-a1">
-                    <input type="radio" id="q2-a1" value="true">
+                    <input type="radio" id="q2-a1" name="q2" value="true">
                     True
                   </label>
                 </li>
                 <li>
                   <label for="q2-a2">
-                    <input type="radio" id="q2-a2" value="false">
+                    <input type="radio" id="q2-a2" name="q2" value="false">
                     False
                   </label>
                 </li>
