components update in Quiz

--- a/Quiz-Webpage/static/css/styles.css
+++ b/Quiz-Webpage/static/css/styles.css
@@ -17,16 +17,37 @@ header {
     width: 100%;
     background-color: #1b1b32;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    
 }
 
 h1 {
     color: #f1be32;
-    font-size: min(5vw, 1.2em)
+    font-size: min(5vw, 1.2em);
+    text-align: center;
+}
+
+main {
+    padding-top: 40px;
+}
+
+section {
+    width: 80%;
+    margin: 0 auto 10px auto;
+    max-width: 600px;
 }
 
 nav > ul {
     justify-content: space-evenly;
     display: flex;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
+    flex-wrap: wrap;
 }
 
 h1, h2 {
@@ -35,6 +56,8 @@ h1, h2 {
 
 h2 {
     border-bottom: 4px solid #dfdfe2;
+    margin-top: 0;
+    padding-top: 60px;
 }
 
 .sr-only {
@@ -51,4 +74,29 @@ h2 {
 
 p:before {
     content: "Question #";
+}
+
+nav > ul > li {
+    color: #dfdfe2;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    display: block;
+}
+nav > ul > li:hover {
+  background-color: #dfdfe2;
+  color: #1b1b32;
+  cursor: pointer
+}
+
+li > a {
+  color: inherit;
+  text-decoration: none;
+}
+
+/*a {
+    color: #dfdfe2;
+}*/
+
+.info {
+    padding: 1px 0 0 1px;
 }
