--- a/Quiz-Webpage/templates/index.html
+++ b/Quiz-Webpage/templates/index.html
@@ -93,22 +93,35 @@
         <h2 id="css-questions">CSS</h2>
         <div class="formrow">
           <div class="question-block">
-            <label>Can the CSS margin property accept negative values?</label>
+            <label for="selector">Can the CSS margin property accept negative values?</label>
           </div>
           <div class="answer">
-            <select required>
+            <select id="selector" name="selector" required>
               <option value="">Select an option</option>
               <option value="yes">Yes</option>
               <option value="no">No</option>
             </select>
           </div>
-          <div class="question-block"></div>
-          <div class="answer"></div>
+          <div class="question-block">
+            <label for="css-textarea">Do you have any question:</label>
+          </div>
+          <div class="answer">
+            <textarea name="css-textarea" id="css-textarea" placeholder="Who is flexbox..." rows="5" cols="24"></textarea>
+          </div>
         </div>
       </section>
+      <button type="submit">Send</button>
     </form>
 
   </main>
+  <footer>
+    <address>
+      <a href="https://freecodecamp.org">freeCodeCamp</a><br/>
+      San Fransico<br/>
+      California<br/>
+      USA
+    </address>
+  </footer>
   
 </body>
 </html>
