--- a/Quiz-Webpage/static/css/styles.css
+++ b/Quiz-Webpage/static/css/styles.css
@@ -1,3 +1,9 @@
+@media (prefers-reduced-motion: no-preference){
+    * {
+        scroll-behavior: smooth;
+    }    
+}
+
 body {
     background: #f5f6f7;
     color: #1b1b32;
@@ -31,7 +37,7 @@ h1 {
 }
 
 main {
-    padding-top: 40px;
+    padding-top: 25px;
 }
 
 section {
@@ -72,10 +78,6 @@ h2 {
     border: 0;
 }
 
-p:before {
-    content: "Question #";
-}
-
 nav > ul > li {
     color: #dfdfe2;
     margin: 0 0.2rem;
@@ -99,4 +101,82 @@ li > a {
 
 .info {
     padding: 1px 0 0 1px;
+}
+
+.formrow {
+    margin-top: 30px;
+    padding: 0px 15px;
+}
+
+input {
+    font-size: 16px;
+}
+
+.info input, .info label {
+    display: inline-block;
+}
+
+.info input {
+    width: 50%;
+    text-align: left;
+}
+
+.info label {
+    width: 10%;
+    min-width: 55px;
+    text-align: right;
+}
+
+.question-block {
+    text-align: left;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    padding-top: 5px;
+}
+
+p {
+    margin-top: 5px;
+    padding-left: 15px;
+    font-size: 20px;
+}
+
+p:before {
+    content: "Question #";
+}
+
+.question {
+    border: none;
+    padding-bottom: 0;
+}
+
+.answer-list {
+    list-style: none;
+    padding: 0;
+}
+
+button {
+    display: block;
+    margin: 40px auto;
+    width: 40%;
+    padding: 15px;
+    font-size: 23px;
+    background: #d0d0d5;
+    border: 3px solid #3b3b4f;
+}
+
+footer {
+    background-color: #2a2a40;
+    display: flex;
+    justify-content: center;
+}
+
+footer, 
+footer a {
+    color: #dfdfe2;
+}
+
+address {
+    text-align: center;
+    padding: 0.3em;
 }
